--- a/src/component/TestimonialSlider/testimonial.css
+++ b/src/component/TestimonialSlider/testimonial.css
@@ -1,31 +1,103 @@
-.testimonial-container{
-  background-color: rgb(218, 231, 227);
-  width: 70vw;
- padding: 16px;
-}
-
-.testimonial-img{
-  height: 113px;
-  width: 113px;
-  border-radius: 113px;
-
-}
-.margin-container{
-  text-align: center;
-  margin-left: 20px;
-  flex-wrap: wrap;
-
-}
-.tesi-into{
-  font-size: 15px;
-  font-family:  Arial, sans-serif;
-  padding: 10px;
-}
-.testi-name{
+body{
+  margin:0px;
+  padding: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
+  box-sizing: border-box;
 }
-.testi-possition{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 13px;
+.cards{
+  background: #28223f;
+  display: grid;
+  place-items: center;
+  min-height: 70vh;
+}
+.outer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.cards .card{
+  background: #ffffff;
+  padding: 1.5rem;
+  max-width: 30rem;
+  border-radius: .5rem;
+  position: absolute;
+  pointer-events: none;
+  opacity: 0;
+  animation: animate 10s infinite linear;
+  animation-delay: calc(3s * var(--delay));
+}
+.profile .header{
+  display: flex;
+  align-items: center;
+}
+.header{
+  justify-content: space-between;
+}
+.profile{
+  margin-bottom: 1rem;
+}
+
+
+.profile .img{
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  padding: 5px;
+  display: flex;
+  background: #ffffff;
+  box-shadow: 0 8px 24px #00000031;
+}
+
+.profile .img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile .details{
+  margin-left: 10px;
+
+}
+
+
+.outer:hover .card{
+  animation-play-state: paused;
+
+}
+.cards .card:last-child{
+  animation-delay: calc(1s * var(--delay));
+}
+
+
+@keyframes animate {
+  0%{
+      opacity: 0;
+      transform: translateY(100%) scale(0.5);
+  }
+  5%, 20%{
+      opacity: 0;
+      transform: translateY(100%) scale(0.7);   
+  }
+  25%, 40%{
+      opacity: 1;
+      pointer-events: all;
+      transform: translateY(0%) scale(1);
+  }
+  45%, 60%{
+      opacity: 0.4;
+      transform: translateY(-100%) scale(0.7);
+  }
+  65%, 100%{
+      opacity: 0;
+      transform: translateY(-100%) scale(0.5);
+  }
+}
+@media screen and (max-width: 467px) {
+  .card{
+    font-size: 14px;
+    padding: .25rem!important;
+
+  }
 }
