--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -111,3 +111,8 @@
   .icon-footer{
     margin-right: 15px;
   }
+@media screen and (max-width: 600px) {
+  .copy-right-text{
+    font-size: 15px;
+  }
+}
