--- a/src/component/Listing/listing.css
+++ b/src/component/Listing/listing.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    
 }
 
 body{
@@ -32,6 +33,7 @@ body{
 .listing-heading{
   font-size: 30px;
   font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
 @media screen and (max-width: 600px) {
   .listing-heading{
@@ -41,7 +43,8 @@ body{
 }
 .text{
   font-size: 17px;
-  margin-bottom: 35px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
 }
 @media screen and (max-width: 600px) {
   .text{
@@ -49,7 +52,17 @@ body{
     
   }
 }
-
+.text-2{
+  font-size: 17px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-bottom: 35px;
+}
+@media screen and (max-width: 600px) {
+  .text-2{
+    font-size: 15px;
+    
+  }
+}
 .two-list-input-container{
   display: flex;
   align-items: center;
@@ -76,6 +89,8 @@ body{
 }
 .list-label{
   color: red;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
 
 }
 .list-input{
@@ -105,8 +120,9 @@ body{
 }
 .unrequired-label{
   color: #000000;
-  font-size: 16px;
+  font-size: 18px;
   padding: 5px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
 .single-frame-input-container{
@@ -127,7 +143,7 @@ body{
   }
 }
 .single-list-input{
-  width: 46vw;
+  width: 46.7vw;
 	height: 43px;
 	border-width: 0px;
   background-color: azure;
@@ -171,7 +187,7 @@ body{
   }
 }
 .area-input{
-  width: 28vw;
+  width: 33vw;
   height: 43px;
 	border-width: 0px;
   background-color: azure;
@@ -184,7 +200,7 @@ body{
   }
 }
 .text-area{
-  width: 50vw;
+  width: 47vw;
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
@@ -233,11 +249,13 @@ body{
    
   }
 }
+
 .gpay-text{
   font-size: 14px;
   width: 16.5vw;
   margin-left: 10px;
   color: red;
+  text-align: end;
 }
 @media screen and (max-width: 600px) {
   .gpay-text{
@@ -251,6 +269,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .checkbox-input-container{
   background-color: antiquewhite;
