--- a/src/component/TestimonialSlider/testimonial.css
+++ b/src/component/TestimonialSlider/testimonial.css
@@ -18,7 +18,7 @@ body{
 }
 .cards .card{
   background: #ffffff;
-  padding: 1.5rem;
+  padding: 2rem;
   max-width: 30rem;
   border-radius: .5rem;
   position: absolute;
@@ -26,6 +26,12 @@ body{
   opacity: 0;
   animation: animate 10s infinite linear;
   animation-delay: calc(3s * var(--delay));
+}
+
+@media screen and (max-width: 600px) {
+   .card{
+    margin: 10px;
+  }
 }
 .profile .header{
   display: flex;
@@ -40,8 +46,8 @@ body{
 
 
 .profile .img{
-  height: 70px;
-  width: 70px;
+  height: 90px;
+  width: 100px;
   border-radius: 50%;
   padding: 5px;
   display: flex;
@@ -100,4 +106,17 @@ body{
     padding: .25rem!important;
 
   }
+}
+.name-position-container{
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.sanjay{
+  font-size: 17px;
+  font-weight: bold;
+}
+.sanjay-text{
+  font-size: 15px;
 }
