--- a/src/component/Faq/Faq.css
+++ b/src/component/Faq/Faq.css
@@ -23,10 +23,11 @@ body {
 
 .faq-container {
   margin-top: 20px;
+  margin: 13px;
 }
 
 .faq-heading {
-  font-size: 2em;
+  font-size: 3rem;
   margin-bottom: 30px;
   margin-top: 60px;
   font-weight: bold;
