--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -1,9 +1,12 @@
-* {
+*{
     box-sizing: border-box;
+	
+   
 }
 
 body {
     margin: 0;
+    overflow-x: hidden; 
 }
 
 .heading {
@@ -121,7 +124,7 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: baseline;
-        width: 100%;
+        width: 90%;
         /* Ensure full width on smaller screens */
         background-color: transparent;
     }
@@ -147,7 +150,7 @@ body {
 
 @media screen and (max-width: 600px) {
     .detail-card {
-        width: 100%;
+        width: 90%;
         /* Ensure full width on smaller screens */
         margin-left: 0;
         margin-bottom: 10px;
