--- a/src/component/Listing/listing.css
+++ b/src/component/Listing/listing.css
@@ -99,6 +99,7 @@ body{
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
+  margin-bottom: 17px;
 }
 @media screen and (max-width: 600px) {
   .list-input{
@@ -148,6 +149,7 @@ body{
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
+  margin-bottom: 17px;
 }
 @media screen and (max-width: 600px) {
   .single-list-input{
@@ -172,6 +174,7 @@ body{
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
+  margin-bottom: 17px;
 }
 @media screen and (max-width: 600px) {
   .blood-input{
@@ -197,6 +200,7 @@ body{
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
+  margin-bottom: 17px;
 }
 @media screen and (max-width: 600px) {
   .area-input{
@@ -209,6 +213,8 @@ body{
 	border-width: 0px;
   background-color: azure;
   padding: 5px;
+  margin-bottom: 17px;
+  margin-top: 5px;
 }
 @media screen and (max-width: 600px) {
   .text-area{
