--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -84,11 +84,13 @@ body{
     height: 80vh;
 }
 .input-container{
-	background-color: rgb(218, 231, 227);
+	background-color: #fff;
 	width: 20vw;
 	margin: 10px;
 	padding: 10px;
-	border-radius: 5px;
+	border-top-right-radius: 15px;
+	border-bottom-left-radius: 15px;
+	box-shadow: 0 0 15px 0 #737574;
 	
 }
 @media screen and (max-width: 600px) {
@@ -118,6 +120,8 @@ body{
 	padding: 8px;
     border-width: 0px;
 	margin-bottom: 17px;
+	background-color: transparent;
+	border-bottom: solid 1px;
 }
 @media screen and (max-width: 600px) {
 	.input{
@@ -135,11 +139,13 @@ body{
 	}
 }
 .input-two{
-	background-color: rgb(218, 231, 227);
+	background-color: #fff;
 	width: 42vw;
 	margin: 10px;
 	padding: 10px;
-	border-radius: 5px;
+	box-shadow: 0 0 15px 0 #737574;
+	border-top-right-radius: 22px;
+	border-bottom-left-radius: 22px;
 	
 
 }
@@ -152,6 +158,7 @@ body{
 	margin: 12px;
 	border-width: 0px;
 	width: 37vw;
+	padding: 5px;
 }
 @media screen and (max-width: 600px) {
 	.textarea{
