--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -130,7 +130,7 @@ body {
 
 .detail-card {
     background-color: beige;
-    box-shadow: 0 0 25px 0 black;
+    box-shadow: 0 0 20px 0 #737574;
     border-radius: 5px;
     width: 55%;
     /* Changed from 55vw to 100% */
