--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  box-shadow: 0 0 25px 0 black;
+  background-color: #F3F8F8;
   
 }
 @media screen and (max-width: 600px) {
