--- a/src/component/Listing/listing.css
+++ b/src/component/Listing/listing.css
@@ -63,6 +63,19 @@ body{
     
   }
 }
+.form-main-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 15px;
+}
+.listing-form-container{
+  /* background-color: #fcfffd;
+  box-shadow: 0 0 15px 0 #737574; */
+  width: 70vw;
+ 
+}
 .two-list-input-container{
   display: flex;
   align-items: center;
@@ -75,7 +88,8 @@ body{
   }
 }
 .label-input-container{
-  background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
 	width: 25vw;
 	margin: 10px;
 	padding: 10px;
@@ -97,7 +111,9 @@ body{
   width: 20vw;
 	height: 43px;
 	border-width: 0px;
-  background-color: azure;
+  background-color: #e7e8da;
+  border-bottom: solid 1px black;
+  
   padding: 5px;
   margin-bottom: 17px;
 }
@@ -132,7 +148,8 @@ body{
   justify-content: center;
 }
 .single-input-container{
-  background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
 	width: 52vw;
 	margin: 10px;
 	padding: 10px;
@@ -147,7 +164,8 @@ body{
   width: 46.7vw;
 	height: 43px;
 	border-width: 0px;
-  background-color: azure;
+  background-color: #e7e8da;
+  border-bottom: solid 1px black;
   padding: 5px;
   margin-bottom: 17px;
 }
@@ -157,7 +175,8 @@ body{
   }
 }
 .blood-input-container{
-    background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
     width: 12vw;
     margin: 10px;
     padding: 10px;
@@ -172,7 +191,8 @@ body{
   width: 8vw;
   height: 43px;
 	border-width: 0px;
-  background-color: azure;
+  background-color: #e7e8da;
+  border-bottom: solid 1px black;
   padding: 5px;
   margin-bottom: 17px;
 }
@@ -183,11 +203,13 @@ body{
   }
 }
 .area-input-container{
-  background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
   width: 38vw;
   margin: 10px;
   padding: 10px;
-  border-radius: 5px;  
+  border-radius: 5px; 
+  
 }
 @media screen and (max-width: 600px) {
   .area-input-container{
@@ -198,7 +220,8 @@ body{
   width: 33vw;
   height: 43px;
 	border-width: 0px;
-  background-color: azure;
+  background-color: #e7e8da;
+  border-bottom: solid 1px black;
   padding: 5px;
   margin-bottom: 17px;
 }
@@ -209,17 +232,20 @@ body{
   }
 }
 .text-area{
-  width: 47vw;
+  width: 46vw;
 	border-width: 0px;
-  background-color: azure;
+  background-color: #e7e8da;
+  border-bottom: solid 1px black;
   padding: 5px;
   margin-bottom: 17px;
   margin-top: 5px;
+  margin-left: 15px;
 }
 @media screen and (max-width: 600px) {
   .text-area{
     height: 133px;
     width: 55vw;
+    margin-left: 0px;
 
   }
 }
@@ -240,7 +266,8 @@ body{
   }
 }
 .captcha-input{
-  background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
 	width: 16.5vw;
   height: 43px;
 	margin: 10px;
@@ -284,7 +311,8 @@ body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .checkbox-input-container{
-  background-color: antiquewhite;
+  background-color: #fffffc;
+  box-shadow: 0 0 15px 0 #737574;
 	width: 52vw;
 	margin: 10px;
 	padding: 10px;
