--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,13 @@ body {
   overflow-x: hidden;
  
 }
-.whatsapp-icon{
+.w-icon{
   position: fixed;
   width: 60px;
   height: 60px;
   bottom: 40px;
-  right: 40px;
+  left: 40px;
   text-align: center;
   z-index: 100;
+ 
 }
