--- a/src/component/Popup/Popup.css
+++ b/src/component/Popup/Popup.css
@@ -13,6 +13,14 @@
 
 .popup-content {
     text-align: center;
+    font-size: 22px;
+    font-family: "Goudy Bookletter 1911", sans-serif;
+    color: rgb(12, 158, 12);
+    font-weight: 600;
+    width: 343px;
+    background-color: #b4edb6;
+    
+
 }
 
 .close {
@@ -22,4 +30,8 @@
     cursor: pointer;
     font-size: 40px;
     color: red;
+}
+.birthday-image{
+    width: 343px;
+    height: 284px;
 }
