--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -1,11 +1,13 @@
 *{
     box-sizing: border-box;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    
 }
 body{
 	margin: 0px;
 }
+
+
 .contact-img{
 	width: 100%;
   height: 60vh;
@@ -18,6 +20,13 @@ body{
 		width: 100%;
 	}
 }
+.main-container{
+	background-image: url("https://img.freepik.com/free-vector/gradient-abstract-background_23-2149131346.jpg?t=st=1720076202~exp=1720079802~hmac=9be77bad167280078904303405c696e7aa89521437671bf4161d3e8f6fe9407e&w=740");
+	background-size: cover;
+	
+
+}
+
 .contact-main-container{  
     margin-left: 64px;
     margin-top: 26px;
@@ -32,12 +41,14 @@ body{
     margin: 13px;
     font-size: 32px;
 	padding-left: 10px;
+	color: #fff;
+	font-weight: bold;
 }
 .contact-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 52vw;
+    width: 60vw;
     margin-left: 10px;
 }
 @media screen and (max-width: 600px) {
@@ -48,9 +59,27 @@ body{
 		margin-left: 12px;
 	}
 }
+.phone-no-container{
+	background-color: #69a2db;
+	box-shadow: 0 0 15px black;
+	padding: 10px;
+	border-top-right-radius: 13px;
+	border-bottom-left-radius: 13px;
+	color: #ffffffc5;
+	font-weight: 700;
+	margin: 10px;
+}
+@media screen and (max-width: 600px) {
+	.phone-no-container{
+		margin: 8px;
+		padding: 6px;
+		width: 60vw;
+	}
+}
+
 .contact-way{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
+    font-size: 17px;
 	margin: 10px;
 }
 .icon-footer{
@@ -60,6 +89,7 @@ body{
     display: flex;
     padding: 10px;
     margin-left: 64px;
+	margin-top: 23px;
 }
 @media screen and (max-width: 600px) {
 	.img-and-form-container{
