--- a/src/component/Faq/Faq.css
+++ b/src/component/Faq/Faq.css
@@ -27,7 +27,7 @@ body {
 }
 
 .faq-heading {
-  font-size: 3rem;
+  font-size: 32px;
   margin-bottom: 30px;
   margin-top: 60px;
   font-weight: bold;
