--- a/src/component/Popup/Popup.css
+++ b/src/component/Popup/Popup.css
@@ -6,7 +6,7 @@
     background-color: #b4edb6;
     padding: 20px;
     border: 3px solid #2d522e;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1) 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1) ;
     z-index: 1000;
     border-radius: 10px;
 }
@@ -14,7 +14,7 @@
 
 .popup-content {
     text-align: center;
-    font-size: 22px;
+    font-size: 17px;
     font-family: "Goudy Bookletter 1911", sans-serif;
     color: rgb(86, 86, 145);
     font-weight: 600;
@@ -22,6 +22,19 @@
     background-color: #b4edb6;
 
 
+}
+
+.wish-text {
+    font-size: 15px;
+    margin-bottom: 6px;
+}
+
+.message-client-name-container {
+    background-color: #adf78d;
+    padding: 5px;
+    margin: 10px;
+    box-shadow: 0 0 10px black;
+    border-radius: 10px;
 }
 
 .close {
@@ -41,13 +54,31 @@
 @media screen and (max-width: 600px) {
     .popup {
         width: 85%;
+        flex-direction: column;
         
+        
+
     }
-    .birthday-image{
+
+    .birthday-image {
         width: 303px;
         height: 184px;
     }
-    .popup-content{
-        font-size: 18px;
+
+    .popup-content {
+        font-size: 13px;
+        width: 233px;
+        height: 54px;
+    }
+
+    .wish-text {
+        font-size: 11px;
+    }
+    .birthday-image {
+        width: 142px;
+        height: 124px;
+        object-fit: cover;
+       
+        
     }
 }
