--- a/src/component/Brand/brand.css
+++ b/src/component/Brand/brand.css
@@ -2,3 +2,10 @@
     padding: 14px;
    
 }
+.marquee-container{
+    width: 79%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
