--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	
    
 }
 body{
@@ -23,7 +23,6 @@ body{
 .main-container{
 	background-image: url("https://img.freepik.com/free-vector/gradient-abstract-background_23-2149131346.jpg?t=st=1720076202~exp=1720079802~hmac=9be77bad167280078904303405c696e7aa89521437671bf4161d3e8f6fe9407e&w=740");
 	background-size: cover;
-	
 
 }
 
@@ -69,25 +68,28 @@ body{
 	font-weight: 700;
 	margin: 10px;
 }
+
 @media screen and (max-width: 600px) {
 	.phone-no-container{
 		margin: 8px;
 		padding: 6px;
-		width: 60vw;
+		width: 70vw;
 	}
 }
 
 .contact-way{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Trebuchet MS', sans-serif;
     font-size: 17px;
 	margin: 10px;
 }
 .icon-footer{
 	height: 22px;
 }
+
 .img-and-form-container{
     display: flex;
     padding: 10px;
+	justify-content: center;
     margin-left: 64px;
 	margin-top: 23px;
 }
@@ -112,90 +114,47 @@ body{
 .cont-img{
     width: 40vw;
     height: 80vh;
+	border-radius: 12px;
 }
-.input-container{
-	background-color: #fff;
-	width: 20vw;
-	margin: 10px;
-	padding: 10px;
-	border-top-right-radius: 15px;
-	border-bottom-left-radius: 15px;
-	box-shadow: 0 0 15px 0 #737574;
-	
-}
-@media screen and (max-width: 600px) {
-	.input-container{
-		width: 80vw;
-	}
-}
-.label{
-	font-size: 15px;
-    font-weight: bold;
-}
-@media screen and(max-width: 600px) {
-	.label{
-		font-size: 10px;
-		max-width: 350px;
-		width: 350px;
-		
-	}
-}
-.required{
-	color: red;
-}
-.input{
-	width: 16vw;
-	height: 43px;
-	border-width: 0px;
-	padding: 8px;
-    border-width: 0px;
-	margin-bottom: 17px;
-	background-color: transparent;
-	border-bottom: solid 1px;
-}
-@media screen and (max-width: 600px) {
-	.input{
-		width: 64vw;
-	}
-}
-.two-input-container{
-    display: flex;
-    align-items: center;
-}
-@media screen and (max-width: 600px) {
-	.two-input-container{
-		display: inline;
-		align-items: start;
-	}
-}
-.input-two{
-	background-color: #fff;
-	width: 42vw;
-	margin: 10px;
-	padding: 10px;
-	box-shadow: 0 0 15px 0 #737574;
-	border-top-right-radius: 22px;
-	border-bottom-left-radius: 22px;
-	
+
+
+.form-container{
+	background-color: #DDD6FF;
+	padding: 13px;
+	width: 40%;
+	height: 80vh;
+	margin-top: 10px;
+	border-radius: 12px;
+	box-shadow: 0 0 15px black;
 
 }
+.two-input-contianer{
+	margin: 53px;
+}
+.textarea-container-mine{
+	margin-left: 47px;
+	margin-top: 43px;
+}
+.contact-text{
+	text-align: center;
+	font-size: 18px;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	
+	margin-top: 15px;
+}
 @media screen and (max-width: 600px) {
-	.input-two{
-		width: 80vw;
+	.form-container{
+		width: 90%;
 	}
-}
-.textarea{
-	margin: 12px;
-	border-width: 0px;
-	width: 37vw;
-	padding: 5px;
-}
-@media screen and (max-width: 600px) {
-	.textarea{
-		width: 63vw;
+	.two-input-contianer{
+		margin: 23px;
+		flex-direction: column;
+		margin-bottom: 29px;
 	}
-}
-.btn-container{
-    text-align: center;
-    margin-top: 25px;
+	.textarea-container-mine{
+		margin-left: 24px;
+	}
+	.contact-text{
+		display: none;
+	}
 }
