--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     box-sizing: border-box;
 	
@@ -190,71 +192,6 @@ body {
     margin-top: 30px;
 }
 
-.process-align-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-@media screen and (max-width: 600px) {
-    .process-align-container {
-        align-items: center;
-
-    }
-}
-
-.one-process {
-    display: flex;
-}
-
-@media screen and (max-width: 600px) {
-    .one-process {
-        display: flex;
-        flex-direction: column;
-        margin-right: 22px;
-
-    }
-}
-
-.process-detail-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 45px;
-    padding-left: 45px;
-
-}
-
-@media screen and (max-width: 600px) {
-    .process-detail-card {
-        margin: 12px;
-        justify-content: left;
-        padding-left: 10px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .collaborate {
-        margin-top: 25px;
-    }
-}
-
-.apply-heading {
-    font-size: 15px;
-    font-family: sans-serif;
-    font-weight: bold;
-    margin-bottom: 30px;
-}
-
-@media screen and (max-width: 600px) {
-    .apply-heading {
-        max-width: 122px;
-        width: 122px;
-        margin-right: 20px;
-        text-align: center;
-    }
-}
 
 .com-logo-container {
     display: flex;
@@ -363,4 +300,94 @@ body {
     font-size: 33px;
     margin: 22px;
 
+}
+
+/* New css */
+
+
+.process-align-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+    .process-align-container {
+        align-items: center;
+
+    }
+}
+
+.one-process {
+    display: flex;
+}
+
+@media screen and (max-width: 600px) {
+    .one-process {
+        display: flex;
+        flex-direction: column;
+        margin-right: 22px;
+
+    }
+}
+
+.process-detail-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 45px;
+    padding: 10px;
+    background-color: #f5f6f7;
+    box-shadow: 0 0 20px black;
+    border-radius: 20px;
+    width: 245px;
+    height: 243px;
+    
+
+
+}
+
+@media screen and (max-width: 600px) {
+    .process-detail-card {
+        margin: 12px;
+        justify-content: left;
+        padding-left: 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .collaborate {
+        margin-top: 25px;
+    }
+}
+
+
+.our-process-profile{
+    width: 222px;
+}
+
+.apply-heading {
+    font-size: 15px;
+    font-family: "Playwrite GB S", cursive;
+    font-weight: bold;
+    margin-top: 22px;
+}
+
+@media screen and (max-width: 600px) {
+    .apply-heading {
+        max-width: 122px;
+        width: 122px;
+        margin-right: 20px;
+        text-align: center;
+        
+    }
+}
+
+
+.process-text{
+    font-size: 15px;
+    font-family: "Playwrite GB S", cursive;
+    font-weight: bold;
+    margin-top: 22px;
 }
