--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+* {
     box-sizing: border-box;
-	
-   
+
+
 }
 
 body {
     margin: 0;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 
@@ -23,8 +23,9 @@ body {
     object-fit: cover;
     display: block;
 }
+
 @media screen and (max-width: 600px) {
-    .crousal-img{
+    .crousal-img {
         width: 100%;
     }
 }
@@ -200,11 +201,11 @@ body {
 
 .com-logo {
     width: 142px;
-    
+
     margin: 64px;
     display: inline-block;
     margin-right: 10px;
-    
+
 }
 
 .com-logo:hover {
@@ -313,6 +314,7 @@ body {
 
 @media screen and (max-width: 600px) {
     .process-align-container {
+        flex-direction: column;
         align-items: center;
 
     }
@@ -340,12 +342,18 @@ body {
     padding: 10px;
     background-color: #f5f6f7;
     box-shadow: 0 0 20px black;
-    border-radius: 20px;
     width: 245px;
     height: 243px;
-    
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
 
 
+
+}
+@media screen and (max-width:1000px) {
+    .process-detail-card{
+        display: flex;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -353,6 +361,9 @@ body {
         margin: 12px;
         justify-content: left;
         padding-left: 10px;
+        width: 205px;
+        height: 200px;
+        padding: 14px;
     }
 }
 
@@ -363,7 +374,7 @@ body {
 }
 
 
-.our-process-profile{
+.our-process-profile {
     width: 222px;
 }
 
@@ -376,16 +387,15 @@ body {
 
 @media screen and (max-width: 600px) {
     .apply-heading {
-        max-width: 122px;
-        width: 122px;
+        width: 172px;
         margin-right: 20px;
         text-align: center;
-        
+        margin-top: 18px;
+
     }
 }
 
-
-.process-text{
+.process-text {
     font-size: 15px;
     font-family: "Playwrite GB S", cursive;
     font-weight: bold;
